<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>TgBot.my</groupId>
    <artifactId>TelegramJava</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
   <dependencies>
       <dependency>
           <groupId>org.telegram</groupId>
           <artifactId>telegrambots</artifactId>
           <version>6.0.1</version>
       </dependency>

       <dependency>
           <groupId>com.google.apis</groupId>
           <artifactId>google-api-services-youtube</artifactId>
           <version>v3-rev222-1.25.0</version>
       </dependency>

       <dependency>
           <groupId>io.github.cdimascio</groupId>
           <artifactId>java-dotenv</artifactId>
           <version>3.0.0</version>
       </dependency>
   </dependencies>
</project>